--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-native-web": "~0.11.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.6",
+    "@babel/core": "^7.11.4",
+    "@babel/preset-env": "^7.11.0",
     "babel-preset-expo": "~8.1.0"
   },
   "private": true
